# data_serial

./: .gitignore  main.py  pyproject.toml
src/: plyground.ipynb
src/helpers/: serial.py
src/serialized/: serialized_pokemon.yml
