[project]
name = "data-serial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
]
